added docker and docker compose

--- a/notes-backend/.env
+++ b/notes-backend/.env
@@ -1,2 +1,2 @@
-mongoURL = "your_mongodb_url"
+mongoURL = "mongodb://root:example@mongo:27017/notesdb?authSource=admin"
 PORT = "port_of_your_choice"
